Fix: front에서 요구한 형식으로 게시글 정보 반환 로직들 수정